Added barrels collisions Pulled up moveEntity method Tested multiple barrels on map, it is working, currently they disappear when colliding with Mario